chore: Updated readme for new tasks